# facerecognition-external-model

./: facerecognition-external-model.py  pyproject.toml
facerecognition_external_model/: main.py
