[tool.poetry]
name = "facerecognition-external-model"
version = "0.2.0"
description = ""
authors = ["Matias De lellis <mati86dl@gmail.com>", "Guy Streeter <guy.streeter@gmail.com>", "solonovamax <solonovamax@12oclockpoint.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
dlib = "^19.24.6"
flask = "^3.0.3"
gunicorn = "^23.0.0"
deepface = { git = "https://github.com/serengil/deepface.git", rev = "cc484b54be5188eb47faf132995af16a871d70b9" }
tensorflow = "2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
